Fix photo cards on Safari

--- a/src/sass/_photocard.scss
+++ b/src/sass/_photocard.scss
@@ -12,6 +12,7 @@
   overflow: hidden;
   display: inline-block;
   margin: 0 10px 10px 0;
+  vertical-align: top;
   @media (min-width: 768px) {
     width: 200px;
     height: 300px;
